# TakeOff2

./: .gitignore  AGENT_CRITIC_LOOP_REPORT.md  ARCHITECTURE_REVIEW.md  ORIENTATION_EXTRACTION_REPORT.md  OVERFITTING_REVIEW.md  improve_orientation.py  improve_orientation_fast.py  orientation_improvement_log.json  orientation_test_results.json  orientation_twopass_results.json  pyproject.toml  run_extract.py  run_extract_all.py  run_extract_all.sh  test_cv_sensors.py  test_orientation.py  test_orientation_fast.py  test_orientation_twopass.py
.claude/: settings.json
.claude/agents/: critic.md  dhw-extractor.md  discovery.md  hvac-extractor.md  orientation-extractor.md  project-extractor.md  verifier.md  windows-extractor.md  zones-extractor.md
.claude/workflows/: targeted-improvement.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
evals/: manifest.yaml
evals/canterbury-rd/: extracted.json  ground_truth.csv  timing.json
evals/chamberlin-circle/: extracted.json  ground_truth.csv  timing.json
evals/lamb-adu/: extracted.json  ground_truth.csv  timing.json
evals/martinez-adu/: extracted.json  ground_truth.csv  timing.json
evals/poonian-adu/: extracted.json  ground_truth.csv  timing.json
src/: __init__.py  telemetry.py
src/agents/: __init__.py  __main__.py  cli.py  discovery.py  orchestrator.py
src/cv_sensors/: __init__.py  north_arrow.py  preprocessing.py  rendering.py  wall_detection.py
src/improvement/: __init__.py  __main__.py  apply.py  cli.py  critic.py  review.py
src/preprocessor/: __init__.py  cli.py  rasterize.py
src/schemas/: __init__.py  building_spec.py  discovery.py  enums.py  field_mapping.yaml  takeoff_spec.py  (+1 more)
tests/: conftest.py  test_compare.py  test_improvement.py  test_metrics.py  test_north_arrow.py  test_schemas.py
(+442 files in other folders)
