[project]
name = "takeoff-verifier"
version = "0.1.0"
description = "Evaluation infrastructure for Takeoff v2 extraction system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pandas>=2.2",
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pymupdf>=1.26",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-html>=4.1",
]

[project.scripts]
verifier = "verifier.cli:cli"
preprocessor = "preprocessor.cli:cli"
extractor = "agents.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier", "src/schemas", "src/preprocessor", "src/agents"]
