[project]
name = "takeoff"
version = "0.2.0"
description = "Title 24 building specification extraction and evaluation system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pandas>=2.2",
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pymupdf>=1.26",
    "pillow>=10.0",
    "tqdm>=4.66",
    "opencv-python>=4.8",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-html>=4.1",
]

[project.scripts]
verifier = "verifier.cli:cli"
preprocessor = "preprocessor.cli:cli"
extractor = "agents.cli:cli"
improver = "improvement.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/schemas",
    "src/agents",
    "src/verifier",
    "src/preprocessor",
    "src/improvement",
    "src/cv_sensors",
    "src/telemetry.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
